--- a/style.css
+++ b/style.css
@@ -3,5 +3,13 @@ h1 {
   text-align: center;
   color: white;
   text-shadow: 0px 0px 10px black;
+  font-size: 40vw;
+}
+h3 {
+  font-family: "Apple Chancery", cursive;
+  text-align: center;
+  color: white;
+  text-shadow: 0px 0px 10px black;
+  font-size:30vw;
 }
 
