--- a/style.css
+++ b/style.css
@@ -12,4 +12,9 @@ h3 {
   text-shadow: 0px 0px 10px black;
   font-size:30px;
 }
-
+homeImage{
+  height: 100%; 
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
