--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ h3 {
   text-shadow: 0px 0px 10px black;
   font-size:5vw;
 }
-homeImage{
+#homeImage {
+  height: 100%; 
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
