--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+/* Header/Logo Title */
+.header {
+  padding: 60px;
+  text-align: center;
+  background-image: url("images/cosmetologyBackground");
+  color: white;
+  font-size: 30px;
+}
 h1 {
   font-family: "Apple Chancery", cursive;
   text-align: center;
