--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 .header {
   padding: 60px;
   text-align: center;
-  background-image: url("images/cosmetologyBackground");
+  background-image: url("images/cosmetologyBackground.jpeg");
   color: white;
   font-size: 30px;
 }
