--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 .header {
   padding: 60px;
   text-align: center;
-  background-image: url(https://github.com/aless-mendoza/cosmetology/blob/main/images/cosmetologyBackground.jpeg);
+  background-image: url(https://beautyinstitute.us/wp-content/uploads/2023/01/americanbeauty_blog01.jpg);
   color: white;
   font-size: 30px;
 }
