--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   padding: 60px;
   text-align: center;
   background-image: url(https://beautyinstitute.us/wp-content/uploads/2023/01/americanbeauty_blog01.jpg);
+  background-repeat: no-repeat;
   color: white;
   font-size: 30px;
 }
