--- a/style.css
+++ b/style.css
@@ -12,14 +12,14 @@ h1 {
   font-family: "Apple Chancery", cursive;
   text-align: center;
   color: black;
-  text-shadow: 0px 0px 10px white;
+  text-shadow: 0px 0px 10px #c48bd6;
   font-size: 7vw;
 }
 h3 {
   font-family: "Apple Chancery", cursive;
   text-align: center;
   color: black;
-  text-shadow: 0px 0px 10px white;
+  text-shadow: 0px 0px 10px #c48bd6;
   font-size:5vw;
 }
 img {
