--- a/style.css
+++ b/style.css
@@ -5,21 +5,21 @@
   background-image: url(https://github.com/aless-mendoza/cosmetology/blob/main/images/cosmetologyBackground.jpeg?raw=true);
   background-repeat: no-repeat;
   background-size: cover;
-  color: black;
+  color: white;
   font-size: 30px;
 }
 h1 {
   font-family: "Apple Chancery", cursive;
   text-align: center;
-  color: black;
-  text-shadow: 0px 0px 10px #c48bd6;
+  color: white;
+  text-shadow: 0px 0px 10px #913aab;
   font-size: 7vw;
 }
 h3 {
   font-family: "Apple Chancery", cursive;
   text-align: center;
-  color: black;
-  text-shadow: 0px 0px 10px #c48bd6;
+  color: white;
+  text-shadow: 0px 0px 10px #913aab;
   font-size:5vw;
 }
 img {
