--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 .header {
   padding: 60px;
   text-align: center;
-  background-image: url(images/Cosmetology.jpeg);
+  background-image: url(images/cosme.webp);
   background-repeat: no-repeat;
   background-size: cover;
   color: white;
