--- a/style.css
+++ b/style.css
@@ -25,9 +25,13 @@ h3 {
   text-shadow: 0px 0px 20px #913aab;
   font-size:5vw;
 }
-img {
+#banner {
   height: 100%; 
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+#timeline {
+  border: 1vw solid white;
+  border-radius: 10vw;
 }
