--- a/style.css
+++ b/style.css
@@ -32,6 +32,8 @@ h3 {
   background-size: cover;
 }
 #timeline {
+  position: relative;
+  top: 20vh;
   border: 1vw solid white;
   border-radius: 10vw;
 }
