--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ h1 {
   text-shadow: 0px 0px 20px #913aab;
   font-size: 7vw;
 }
-h3 {
+#subTitle {
   font-family: "Apple Chancery", cursive;
   text-align: center;
   color: white;
@@ -36,4 +36,14 @@ h3 {
   top: 40vh;
   border: 1vw solid black;
   border-radius: 10vw;
+}
+.date1 {
+  position: relative;
+  top:30vh;
+  background-color: #ebc5f0;
+  width: 200px;
+  height: 100px;
+  border-radius:10vw;
+  padding: 10px;
+  margin: 10px;
 }
