--- a/style.css
+++ b/style.css
@@ -33,17 +33,21 @@ h1 {
 }
 #timeline {
   position: relative;
-  top: 40vh;
+  top: 35vh;
   border: 1vw solid black;
   border-radius: 10vw;
 }
 .date1 {
   position: relative;
-  top:30vh;
+  top:20vh;
+  text-align: center;
   background-color: #ebc5f0;
-  width: 200px;
-  height: 100px;
+  width: 300px;
+  height: 200px;
   border-radius:10vw;
   padding: 10px;
   margin: 10px;
+}
+.date1 hover{
+  box-shadow: 0px 0px 20px #black;
 }
