--- a/style.css
+++ b/style.css
@@ -50,6 +50,6 @@ h1 {
   text-shadow: 0px 0px 20px #913aab;
 }
 .calender{
-  text-size:100px;
+  font-size:30px;
   font-family: "Apple Chancery", cursive;
 }
