--- a/style.css
+++ b/style.css
@@ -31,13 +31,13 @@ h1 {
 }
 #timeline {
   position: relative;
-  top: 25%;
+  top: 28%;
   border: 1vw solid black;
   border-radius: 10vw;
 }
 .date1 {
   position: relative;
-  top:20%;
+  top:23%;
   text-align: center;
   background-color: #ebc5f0;
   width: 300px;
@@ -46,7 +46,7 @@ h1 {
   padding: 10px;
   margin: 10px;
 }
-.date1 hover{
+.date1:hover{
   text-shadow: 0px 0px 20px #913aab;
 }
 .calender{
