--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ h1 {
   margin: 10px;
 }
 .date1:hover{
-  text-shadow: 0px 0px 20px #913aab;
+  box-shadow: 0px 0px 20px #913aab;
 }
 .date2 {
   position: relative;
@@ -62,7 +62,7 @@ h1 {
   margin: 10px;
 }
 .date2:hover{
-  text-shadow: 0px 0px 20px #913aab;
+  box-shadow: 0px 0px 20px #913aab;
 }
 .calender{
   font-size:30px;
