--- a/style.css
+++ b/style.css
@@ -24,6 +24,8 @@ h1 {
   text-shadow: 0px 0px 20px #913aab;
 }
 #timeline{
+  padding: 60px;
+  text-align: center;
   background-image: url(images/timelineHolder.png);
   background-repeat: no-repeat;
   background-size: cover;
