--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h1 {
 }
 #timeline{
   text-align: center;
-  background-image: url(images/cosBanner.png);
+  background-image: url(images/timelineHolder.png);
   background-repeat: no-repeat;
   background-size: cover;
 }
