--- a/style.css
+++ b/style.css
@@ -24,9 +24,7 @@ h1 {
   text-shadow: 0px 0px 20px #913aab;
 }
 #timeline{
-  text-align: center;
-  background-image: url(images/timelineHolder.png);
-  background-repeat: no-repeat;
-  background-size: cover;
+  height:auto;
+  width: 100%;
 }
 
