--- a/style.css
+++ b/style.css
@@ -27,4 +27,23 @@ h1 {
   height:auto;
   width: 100%;
 }
-
+table, th, td {
+  border: 2px solid;
+}
+td, th {
+	background-color:#c3c3;
+}
+table {
+  margin-left: auto;
+  margin-right:auto;
+  border-collapse: collapse;
+  width: 50%;
+}
+td {
+  text-align: center;
+  padding:10px;
+}
+td:hover {
+  box-shadow: 0px 0px 10px #7f03fc;
+  padding:13px;
+  
