--- a/style.css
+++ b/style.css
@@ -31,10 +31,10 @@ h1 {
   width: 100%;
 }
 table, th, td {
-  border: 2px solid;
+  border: 10px solid transparent;
 }
 td, th {
-	background-color:#c3c3;
+  background-color:#c3c3;
 }
 table {
   margin-left: auto;
@@ -47,6 +47,5 @@ td {
   padding:10px;
 }
 td:hover {
-  box-shadow: 0px 0px 10px #7f03fc;
   padding:13px;
   
