--- a/style.css
+++ b/style.css
@@ -25,6 +25,12 @@ h1 {
   color: white;
   text-shadow: 0px 0px 20px #913aab;
 }
+h3 {
+  font-family:"American Typewriter", serif;
+  margin-left:10%;
+  font-size:20px;
+  font-weight: bold;
+}
 #subTitle {
   font-family: "Apple Chancery", cursive;
   text-align: center;
