--- a/style.css
+++ b/style.css
@@ -6,10 +6,9 @@ body{
   background-color: #c9c9c9;
 }
 footer {
-    margin:auto;
-    text-align: center;
-    position: fixed;
-    bottom:0%;
+  text-align: center;
+  font-size:10px;
+  color: white;
 }
 a{
   font-size:20px;
