--- a/smoll.css
+++ b/smoll.css
@@ -5,6 +5,12 @@ html {
 body{
   background-color: #c9c9c9;
 }
+footer {
+    margin:auto;
+    text-align: center;
+    position: fixed;
+    bottom:0%;
+}
 a{
   font-size:40px;
   color:white;
