hide small image

--- a/style.css
+++ b/style.css
@@ -43,6 +43,11 @@ h3 {
   color: white;
   text-shadow: 0px 0px 20px #913aab;
 }
+@media only (min-width: 12cm) {
+  #smallImage {
+    display: none;
+  }
+}
 #timeline{
   height:auto;
   width: 100%;
