--- a/smoll.css
+++ b/smoll.css
@@ -22,8 +22,7 @@ a{
   text-align: center;
   background-image: url(images/cosBanner.png);
   background-repeat: no-repeat;
-  background-size: cover;
-  background-height:100%;
+  background-size: auto;
   color: white;
   font-size: 50px;
 }
