--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html {
   scroll-behavior: smooth;
 }
 body{
-  background-color: #c9c9c9;
+  background-color: black;
 }
 footer {
   text-align: center;
