--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ h3 {
   margin-left:10%;
   font-size:30px;
   font-weight: bold;
+  color:white;
 }
 #subTitle {
   font-family: "Apple Chancery", cursive;
