--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h1 {
   font-family: "Apple Chancery", cursive;
   text-align: center;
   color: white;
-  text-shadow: 0px 0px 20px #913aab;
+  text-shadow: 0px 0px 20px black;
 }
 h3 {
   font-family:"American Typewriter", serif;
@@ -42,7 +42,7 @@ h3 {
   font-family: "Apple Chancery", cursive;
   text-align: center;
   color: white;
-  text-shadow: 0px 0px 20px #913aab;
+  text-shadow: 0px 0px 20px black;
 }
 #timeline{
   height:auto;
