--- a/smoll.css
+++ b/smoll.css
@@ -30,7 +30,7 @@ h1 {
   font-family: "Apple Chancery", cursive;
   text-align: center;
   color: white;
-  text-shadow: 0px 0px 20px black;
+  text-shadow: 3px 3px 20px #4e0082;
 }
 h3 {
   font-family:"American Typewriter", serif;
@@ -43,7 +43,7 @@ h3 {
   font-family: "Apple Chancery", cursive;
   text-align: center;
   color: white;
-  text-shadow: 0px 0px 20px black;
+  text-shadow: 3px 3px 20px #4e0082;
 }
 #timeline{
   height:auto;
