--- a/style.css
+++ b/style.css
@@ -38,6 +38,14 @@ h3 {
   font-weight: bold;
   color:white;
 }
+h4{
+  font-size:25px;
+  color:white;
+}
+p{
+  font-size:20px;
+  color:white;
+}
 #subTitle {
   font-family: "Apple Chancery", cursive;
   text-align: center;
