--- a/smoll.css
+++ b/smoll.css
@@ -24,7 +24,7 @@ a{
   background-repeat: no-repeat;
   background-size: cover;
   color: white;
-  font-size: 50px;
+  font-size: 40px;
 }
 h1 {
   font-family: "Apple Chancery", cursive;
@@ -35,9 +35,21 @@ h1 {
 h3 {
   font-family:"American Typewriter", serif;
   margin-left:10%;
-  font-size:50px;
+  font-size:40px;
   font-weight: bold;
   color: white;
+}
+h4{
+  font-size:35px;
+  color:white;
+}
+p{
+  font-size:30px;
+  color:white;
+}
+li{
+  font-size:30px;
+  color:white;
 }
 #subTitle {
   font-family: "Apple Chancery", cursive;
