--- a/style.css
+++ b/style.css
@@ -45,6 +45,9 @@ h4{
 p{
   font-size:20px;
   color:white;
+li {
+  font-size:20px;
+  color:white;
 }
 #subTitle {
   font-family: "Apple Chancery", cursive;
