--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ td:hover {
   padding:15px;
 }
 .cuts{
-  background-color: #8f2576
+  background-color: #8f2576;
   border-radius:10px;
   padding:10px;
 }
