--- a/style.css
+++ b/style.css
@@ -80,10 +80,11 @@ td:hover {
   background-color: #713382;
   padding:15px;
 }
-.cuts{
+.content{
   background-color: #8f2576;
   border-radius:20px;
   padding:20px;
-  width:100px;
+  width:30%;
   height:auto;
+  text-align:center;
 }
