--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ td:hover {
   padding:15px;
 }
 .content{
-  background-color: #8f2576;
+  background-color: #4d3163;
   border-radius:10%;
   padding:20px;
   width:40%;
