--- a/style.css
+++ b/style.css
@@ -82,10 +82,10 @@ td:hover {
 }
 .content{
   background-color: #4d3163;
-  border-radius:10%;
-  padding:20px;
-  width:40%;
+  border-radius:20px;
+  padding:10px;
+  width:30%;
   height:auto;
   text-align:center;
-  border:10%;
+  border-width:10px;
 }
