--- a/style.css
+++ b/style.css
@@ -82,10 +82,11 @@ td:hover {
 }
 .content{
   background-color: #4d3163;
-  border-radius:20px;
+  border-radius:30px;
   padding:10px;
   width:30%;
   height:auto;
   text-align:center;
-  border-width:10px;
+  margin:10px;
+  border: 2px solid white;
 }
