--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ nav * table, th, td {
 nav * td, th {
   background-color: #5c246b;
 }
-nav * table {
+#navTable {
   margin-left: auto;
   margin-right:auto;
   border-collapse: collapse;
