--- a/style.css
+++ b/style.css
@@ -90,3 +90,9 @@ nav * td:hover {
   margin:10px;
   border: 2px solid #6e6e6e;
 }
+table {
+  margin-left: auto;
+  margin-right:auto;
+  border-collapse: collapse;
+  width: 50%;
+}
