--- a/style.css
+++ b/style.css
@@ -90,7 +90,11 @@ nav * td:hover {
   margin:10px;
   border: 2px solid #6e6e6e;
 }
-table {
-  margin-left: auto;
-  margin-right:auto;
+.left{
+  position:absolute;
+  left:10%;
+}
+.right{
+  position:absolute;
+  right: 10%;
 }
