--- a/style.css
+++ b/style.css
@@ -93,5 +93,7 @@ nav * td:hover {
 table {
   margin-left: auto;
   margin-right:auto;
-  border: 2px solid white;
+}
+table, th, td {
+  border: 10px solid white;
 }
