--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ nav * td:hover {
   background-color: #713382;
   padding:15px;
 }
+/*
 .content{
   background-color: #4d3163;
   border-radius:30px;
@@ -90,6 +91,7 @@ nav * td:hover {
   margin:10px;
   border: 2px solid #6e6e6e;
 }
+*/
 table {
   margin-left: auto;
   margin-right:auto;
@@ -99,4 +101,10 @@ table, th, td {
 }
 td {
   width:20vw;
+  background-color: #4d3163;
+  border-radius:30px;
+  padding:10px;
+  width:30%;
+  height:auto;
+  text-align:center;
 }
