--- a/style.css
+++ b/style.css
@@ -96,15 +96,12 @@ table {
   margin-left: auto;
   margin-right:auto;
 }
-table, th, td {
-  border: 10px solid white;
-}
 td {
   width:20vw;
   background-color: #4d3163;
   border-radius:30px;
   padding:10px;
-  width:30%;
   height:auto;
   text-align:center;
+  border: 2px solid #6e6e6e;
 }
