--- a/style.css
+++ b/style.css
@@ -92,11 +92,11 @@ nav * td:hover {
   border: 2px solid #6e6e6e;
 }
 */
-table {
+#optionTable {
   margin-left: auto;
   margin-right:auto;
 }
-td {
+article * td {
   width:20vw;
   background-color: #4d3163;
   border-radius:30px;
