--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ li{
   height:auto;
   width: 100%;
 }
-nav * table, th, td {
+nav * table, td {
   border: 10px solid black;
 }
 nav * td, th {
@@ -103,8 +103,5 @@ article * td {
   padding:10px;
   height:auto;
   text-align:center;
-  border: 2px solid #6e6e6e;
-}
-article * table, th, td {
   border: 30px solid black;
 }
