--- a/style.css
+++ b/style.css
@@ -99,9 +99,9 @@ nav * td:hover {
 article * td {
   width:20vw;
   background-color: #4d3163;
-  border-radius:60px;
+  border-radius:20%;
   padding:10px;
   height:auto;
   text-align:center;
-  border: 30px solid black;
+  border: 20px solid black;
 }
