--- a/style.css
+++ b/style.css
@@ -110,4 +110,6 @@ article * td {
   color:black;
   border-radius:50%;
   border-image: url(borderImage.png) 30 round;
+  text-align:center;
+  width:30%;
 }
