--- a/style.css
+++ b/style.css
@@ -106,6 +106,8 @@ article * td {
   border: 20px solid black;
 }
 #prices{
+  margin-left: auto;
+  margin-right:auto;
   background-color:#f7baed;
   color:black;
   border-radius:50%;
