--- a/style.css
+++ b/style.css
@@ -73,28 +73,16 @@ nav * td {
   padding:10px;
 }
 nav * td:hover {
-  background-color: #e043a4;
+  background-color: #e053aa;
   padding:15px;
 }
-/*
-.content{
-  background-color: #4d3163;
-  border-radius:30px;
-  padding:10px;
-  width:30%;
-  height:auto;
-  text-align:center;
-  margin:10px;
-  border: 2px solid #6e6e6e;
-}
-*/
 #optionTable {
   margin-left: auto;
   margin-right:auto;
 }
 article * td {
   width:20vw;
-  background-color: #4d3163;
+  background-color: #bd42ae;
   border-radius:20%;
   padding:10px;
   height:auto;
