--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ nav * td, th {
 nav * td {
   text-align: center;
   padding:10px;
+  border-radius:10%;
 }
 nav * td:hover {
   background-color: #e053aa;
@@ -82,7 +83,7 @@ nav * td:hover {
 }
 article * td {
   width:20vw;
-  background-color: #bd42ae;
+  background-color: #eb8aff;
   border-radius:20%;
   padding:10px;
   height:auto;
