timeline smoll.css

--- a/smoll.css
+++ b/smoll.css
@@ -109,3 +109,8 @@ article * td {
   margin: 10px,10px;
   text-align:center;
 }
+#timelineImg{
+  background-image: url(images/smallTimeline.png);
+  width:100%;
+  height:auto;
+}
