--- a/smoll.css
+++ b/smoll.css
@@ -107,7 +107,7 @@ article * td {
   text-align:center;
 }
 .optContainer{
-  background-image: url(images/roomImg.jpg);
+  background-image: url(images/roomImg.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
 }
