--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ article * td {
   text-align:center;
 }
 .pContainer{
+  display:inline-block;
   width:40%;
   margin: 10px,10px;
   text-align:center;
