--- a/style.css
+++ b/style.css
@@ -99,6 +99,12 @@ article * td {
   width:30%;
   padding:10px;
 }
+.priceContainer{
+  background-image: url(images/deskImg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top; 
+}
 .dContainer{
   display:inline-block;
   width:40%;
