--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ article * td {
   padding:10px;
 }
 .priceContainer{
-  background-image: url(images/deskImg.png);
+  background-image: url(images/deskImg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
