--- a/smoll.css
+++ b/smoll.css
@@ -95,7 +95,7 @@ article * td {
   padding:15px;
 }
 .priceContainer{
-  background-image: url(images/deskImg.png);
+  background-image: url(images/deskImg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
