--- a/smoll.css
+++ b/smoll.css
@@ -97,13 +97,13 @@ article * td {
 .dContainer{
   display:inline-block;
   width:40%;
-  margin: 10px,10px;
+  margin: 10px;
   text-align:center;
 }
 .pContainer{
   display:inline-block;
   width:40%;
-  margin: 10px,10px;
+  margin: 10px;
   text-align:center;
 }
 #msP{
