--- a/style.css
+++ b/style.css
@@ -102,13 +102,13 @@ article * td {
 .dContainer{
   display:inline-block;
   width:40%;
-  margin: 10px;
+  margin: 10%;
   text-align:center;
 }
 .pContainer{
   display:inline-block;
   width:40%;
-  margin: 10px;
+  margin: 10%;
   text-align:center;
 }
 #msP{
