--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ article * td {
   text-align:center;
   width:30%;
   padding:10px;
+  display:inline-block;
 }
 .dContainer{
   display:inline-block;
@@ -125,4 +126,7 @@ article * td {
 }
 .teach{
   margin: auto;
+}
+#venmo{
+  display:inline-block;
 }
