--- a/smoll.css
+++ b/smoll.css
@@ -15,6 +15,7 @@ a{
   display:block;
 }
 .header {
+  z-index:-2;
   padding: 60px;
   text-align: center;
   background-image: url(images/cosBanner.png);
