--- a/smoll.css
+++ b/smoll.css
@@ -84,6 +84,15 @@ article * td {
   text-align:center;
   border: 10px solid transparent;
 }
+#price{
+  position: relative;
+}
+#venmo{
+  position: absolute;
+  right:10%;
+  width:20%;
+  height:auto;
+}
 #prices{
   margin-left: auto;
   margin-right:auto;
