--- a/style.css
+++ b/style.css
@@ -192,3 +192,15 @@ article * td {
   width:10%;
   height:auto;
 }
+button {
+  border-radius:12px;
+  background-color:transparent;
+  border-color: transparent;
+  color: white;
+  transition-duration: 0.4s;
+  font-size:25px;
+  padding: 14px, 40px;
+}
+button:hover{
+  box-shadow: 0px 0px 15px #ff9cff;
+}
