--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ button {
   color: white;
   transition-duration: 0.4s;
   font-size:25px;
-  padding: 14px, 40px;
+  padding: 10px 10px;
 }
 button:hover{
   box-shadow: 0px 0px 15px #ff9cff;
