--- a/smoll.css
+++ b/smoll.css
@@ -180,6 +180,7 @@ button {
   border-radius:12px;
   background-color:transparent;
   border-color: #ff9cff;
+  border-width: 5px;
   color: white;
   transition-duration: 0.4s;
   font-size:25px;
